@@ -82,20 +82,19 @@ our %S = (%S,
     otc => 0
   },
   resolutions     => [
-    # TODO: Make translatable!
-    [ 'Unknown / console / handheld', '' ],
-    [ 'Non-standard', '' ],
+    [ '_scrres_unknown', '' ],
+    [ '_scrres_nonstandard', '' ],
     [ '640x480',      '4:3' ],
     [ '800x600',      '4:3' ],
     [ '1024x768',     '4:3' ],
     [ '1600x1200',    '4:3' ],
-    [ '640x400',      'widescreen' ],
-    [ '1024x576',     'widescreen' ],
-    [ '1024x600',     'widescreen' ],
-    [ '1024x640',     'widescreen' ],
-    [ '1280x720',     'widescreen' ],
-    [ '1280x800',     'widescreen' ],
-    [ '1920x1080',    'widescreen' ],
+    [ '640x400',      '_scrres_ws' ],
+    [ '1024x576',     '_scrres_ws' ],
+    [ '1024x600',     '_scrres_ws' ],
+    [ '1024x640',     '_scrres_ws' ],
+    [ '1280x720',     '_scrres_ws' ],
+    [ '1280x800',     '_scrres_ws' ],
+    [ '1920x1080',    '_scrres_ws' ],
   ],
   voiced          => [ 0..4 ],
   animated        => [ 0..4 ],
